#15 UI Revamp + alignment issue fixes

--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,133 +1,69 @@
-/* .container{
-    background-color: wheat;
-} */
-*{
-    font-family: 'Baloo Bhai';
-}
-
-body{
-    background-color: rgb(244, 241, 236);
-}
-.container {
-    /* border: 10px solid darkblue; */
-    height: 500px;
-    width: 1162px;
+.aboutSubHeader {
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    top: 76px;
+    flex-direction: row;
+    background-color: navy;
+    align-items: center;
     justify-content: center;
-    /* justify-content: space-between; */
-    border-radius: 40px;
-    background-color:wheat;
-
+    height: 12rem;
+    width: 100%;
 }
 
-.subox {
-    /* border: 2px solid black; */
-    width: 200px;
-    height: 426px;
-    margin: 29px;
-    width: 700px;
-    /* padding: 2px; */
-}
-#box2{
-    background-image: url('https://www.stonybrook.edu/commcms/advising/_undeclared/_images/atas%20card.jpg');
-    background-repeat: no-repeat;
-    background-size: 519px 427px;
-}
-#box1{
-    text-align: center;
-    font-size: 17px;
-    font-weight: lighter;
-    /* color: rgb(61, 61, 210); */
+.aboutSubHeaderTitle {
+    color: white;
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: 200;
+    padding: 30px;
 }
 
-.container2{
-    /* border: 10px solid darkblue; */
-    height: 500px;
-    width: 1162px;
+.baseAboutContainer {
+    margin-top: 30px;
+    margin-bottom: 30px;
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    
-    position: relative;
-    top: 146px;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    /* justify-content: space-between; */
-    border-radius: 40px;
-    background-color:skyblue;
-    /* padding: 15px; */
+}
 
-}
-.subox2{
-    /* border: 2px solid black; */
-    width: 200px;
-    height: 426px;
-    margin: 29px;
-    width: 700px;
-
-}
-#box22{
-    text-align: center;
-    font-size: 17px;
-    font-weight: lighter;
-    color: darkblue;
-    
-}
-#box21{
-
-    /* color: rgb(61, 61, 210); */
-    background-image: url('https://www.ice.org.uk/media/jy4nzd52/engaging-communities-a-role-for-engineers.jpg');
-    background-repeat: no-repeat;
-    background-size: 519px 427px;
-}
-.container3{
-    /* border: 10px solid darkblue; */
-    height: 500px;
-    width: 1162px;
+.aboutContainer {
+    background-color: #C7D2F366;
+    border-radius: 30px;
+    margin: 30px;
+    height: 30rem;
+    width: 70rem;
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    
-    position: relative;
-    top: 220px;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
-    /* justify-content: space-between; */
-    border-radius: 40px;
-    background-color:lightgoldenrodyellow;
-    /* padding: 15px; */
-    margin-bottom: 250px;
-
+    box-shadow: 5px 5px 10px rgb(189, 212, 227);
 }
-.subox2{
-    /* border: 2px solid black; */
-    width: 200px;
-    height: 426px;
-    margin: 29px;
-    width: 700px;
 
+.subox1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 25rem;
+    width: 32rem;
 }
-.subox3{
-    /* border: 2px solid black; */
-    width: 200px;
-    height: 426px;
-    margin: 29px;
-    width: 700px;
 
+.subox1 img, .subox2 img {
+    height: 20rem;
+    width: 28rem;
+    border-radius: 30px;
+    margin: 40px;
 }
-#box32{
 
-    /* color: rgb(61, 61, 210); */
-    background-image: url('https://media.istockphoto.com/id/1200990118/photo/next-level-loading-concept.jpg?s=612x612&w=0&k=20&c=-cFwNebV3pe4eJu9MgQVeH_7D50M-2fedNHL-XO7yiw=');
-    background-repeat: no-repeat;
-    background-size: 519px 427px;
+.subox1 p, .subox2 p {
+    text-align: justify;
+    font-family: sans-serif;
 }
-#box31{
-    text-align: center;
-    font-size: 17px;
-    font-weight: lighter;
-    color: brown;
-    
+
+.subox2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 25rem;
+    width: 32rem;
 }
