--- a/src/Components/Contribute.css
+++ b/src/Components/Contribute.css
@@ -6,15 +6,33 @@
     color: white;
   }
   
-  .container {
+  .contributeContainer {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-  
+    margin: 50px;
   }
+
+  .contributeSubHeader {
+    display: flex;
+    flex-direction: row;
+    background-color: navy;
+    align-items: center;
+    justify-content: center;
+    height: 12rem;
+    width: 100%;
+}
+
+.contributeSubHeaderTitle {
+    color: white;
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: 200;
+    padding: 30px;
+}
   
-  .box {
+  .contributeBox {
     display: block;
     height: 80vh;
     margin-top: 36px;
@@ -23,91 +41,89 @@
   }
   
   
-  #box1 {
+  #contributeBox1 {
     position: relative;
     margin-left: 8px;
-    background-color: rgb(239 229 215);
     width: 60vw;
     display: flex;
     flex-direction: column;
   }
   
-  #box2 {
+  #contributeBox2 {
     position: relative;
     margin-right: 8px;
-    background: url('https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8d29ya3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60') no-repeat center center/cover;
-  
     display: flex;
+    flex-direction: column;
     text-align: center;
     justify-content: center;
-    width: 40vw;
-  
+    align-items: center;
+    width: 35vw;
+    border-radius: 30px;
+    background-color: #C7D2F366;
+    box-shadow: 5px 5px 10px rgb(189, 212, 227);
+  }
+
+  #contributeBox2 img {
+    height: 15em;
+    width: 25em;
+    margin-top: 60px;
+    border-radius: 10%;
   }
   
-  #box2::before {
+  #contributeBox2::before {
     content: "";
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    background-color: rgba(0, 0, 0, 0.40);
+    border-radius: 30px;
   }
   
-  #text {
+  #contributeText {
     z-index: 1;
     display: block;
-    margin: auto;
-  
+    margin-top: 90px;;
+    
   }
   
-  #navbar {
+  #contributeNavbar {
     display: flex;
     align-items: center;
     position: absolute;
     top: -15px;
   }
   
-  #navbar ul {
+  #contributeNavbar ul {
     display: flex;
+    margin-left: 60px;
   }
   
-  #navbar ul li {
+  #contributeNavbar ul li {
     text-decoration: none;
     list-style: none;
-  
-  
   }
   
   .choice {
     text-decoration: none;
-    margin: 29px;
-  
-  
+    margin: 19px;
   }
   
   .choice button {
-    padding: 4px 6px;
+    padding: 10px;
     color: rgb(21, 1, 1);
-    background-color: rgb(234, 208, 172);
+    background-color: #C7D2F366;
     border-radius: 23px;
-    transition-duration: 0.6s;
+    transition-duration: 0.2s;
   }
   
   .choice :hover {
     cursor: pointer;
-    background-color: rgb(66, 9, 9);
-    color: rgb(234, 208, 172);
+    background-color: rgb(69, 99, 218);
+    color: white;
     box-shadow: 0 12px 16px 2px rgba(0, 0, 0, 0.24), 0 17px 50px 2px rgba(0, 0, 0, 0.19);
-  
-  
   }
   
-  #navbar ul li button {
+  #contributeNavbar ul li button {
     font-size: 26px;
   }
   
-  #navbar ul li button:active {
+  #contributeNavbar ul li button:active {
     color: rgb(21, 1, 1);
     background-color: rgb(234, 208, 172);
     font-size: 26px;
@@ -115,14 +131,13 @@
   }
   
   .mainform {
-    
-    width: 50%;
-  
+    width: 55%;
+    padding: 30px;
     position: relative;
-    left: 207px;
-    height: 75%;
-    top: 30px;
-    box-shadow: -0.5rem -0.5rem rgb(207, 134, 25), 0.5rem 0.5rem rgb(207, 134, 25);
+    left: 150px;
+    height: 72%;
+    top: 60px;
+    box-shadow: -0.5rem -0.5rem rgb(31, 95, 213), 0.5rem 0.5rem rgb(63, 117, 218);
   }
   
   .form {
@@ -162,7 +177,7 @@
   }
   
   .textbox:focus {
-    border: 3px solid orange;
+    border: 3px solid rgb(95, 121, 194);
     border-radius: 10px;
   
   }
@@ -175,16 +190,18 @@
     font-size: 23px;
     cursor: pointer;
     border: 2px solid rgb(66, 9, 9);
-    background-color: rgb(239 229 215);
+    background-color: #C7D2F366;
     transition-duration: 0.6s;
+    color: black;
+    font-family: 'Baloo Bhai';
   }
   
   .form-button button:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
-    background-color: orange;
+    background-color: rgb(95, 121, 194);
     font-weight: 900;
     font-size: 30px;
-  
+    color: white;
   }
   
   .form-button button:active {
@@ -198,37 +215,36 @@
     padding: 40px;
   }
   
-  #line1,
-  #line2,
-  #line3,
-  #line4 {
-    font-size: 57px;
+  #contributeLine1,
+  #contributeLine2,
+  #contributeLine3,
+  #contributeLine4 {
+    font-size: 2.5em;
     position: relative;
     bottom: 65px;
-    line-height: 96px;
     font-weight: 900;
-    color: white;
-    font-family: "Audiowide", sans-serif;
+    color: rgb(62, 57, 84);
+    font-family: sans-serif;
     width: 0;
     overflow: hidden;
     margin: 0 auto;
   
-    animation: typing 1.5s steps(30, end) forwards;
+    animation: typing 1s steps(30, end) forwards;
     overflow: hidden;
     white-space: nowrap;
   }
   
-  #line2 {
-    animation-delay: 1.5s;
+  #contributeLine2 {
+    animation-delay: 1s;
   }
   
-  #line3 {
-    animation-delay: 3.0s;
+  #contributeLine3 {
+    animation-delay: 2s;
   }
   
-  #line4 {
-    animation-delay: 4.5s;
-    color: cyan;
+  #contributeLine4 {
+    animation-delay: 3s;
+    color: rgb(0, 157, 255);
   }
   
   #emphasize {
@@ -255,6 +271,10 @@
   
   #tnc {
     display: inline-block;
+  }
+
+  #pt1, #pt2, #pt3, #pt4 {
+    text-align: justify;
   }
   
   .mainform h2 {
