--- a/src/Components/FAQ.css
+++ b/src/Components/FAQ.css
@@ -51,11 +51,11 @@ button {
   transform: scale(0.6);
 }
 
-form {
+#cover form {
   height: 96px;
 }
 
-input[type="text"] {
+.td input[type="text"] {
   width: 100%;
   height: 96px;
   font-size: 60px;
@@ -63,7 +63,7 @@ input[type="text"] {
   font-family: sans-serif;
 }
 
-input[type="text"]::placeholder {
+.td input[type="text"]::placeholder {
   color: #d2d2d2;
   font-family: sans-serif;
   font-size: 50px;
@@ -74,7 +74,7 @@ input[type="text"]::placeholder {
   padding-left: 35px;
 }
 
-button {
+.td button {
   position: relative;
   display: block;
   width: 84px;
@@ -96,7 +96,7 @@ button {
   transition: 0.5s ease all;
 }
 
-button span {
+.td button span {
   position: absolute;
   top: 68px;
   left: 43px;
@@ -109,8 +109,8 @@ button span {
   transition: 0.5s ease all;
 }
 
-button span:before,
-button span:after {
+.td button span:before,
+.td button span:after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -162,25 +162,32 @@ button span:after {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 50px;
+}
+
+.faqSectionDiv h1 {
+  font-family: sans-serif;
+  font-size: 1.6rem;
+}
+
+.faqSectionDiv p {
+  font-family: sans-serif;
 }
 
 .faqSectionDivCard {
-  background-color: rgb(236, 233, 230);
+  background-color: #C7D2F366;
   width: 70%;
   height: 50%;
   border-radius: 30px;
   margin: 30px;
-  box-shadow: 5px 5px 10px rgb(227, 207, 189);
-  transition: all 0.2s ease;
+  box-shadow: 5px 5px 10px rgb(189, 212, 227);
+  cursor: pointer;
 }
 
 .faqSectionDivCard:hover {
-  background-color: rgb(240, 236, 233);
-  width: 70%;
-  height: 50%;
-  border-radius: 5px;
-  margin: 30px;
-  box-shadow: 5px 5px 10px rgb(159, 149, 140);
+  background-color: #C7D2F366;
+  border-radius: 20px;
+  box-shadow: 5px 5px 10px rgb(140, 145, 159);
 }
 
 .faqSectionDivCardTitle {
