--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -30,14 +30,17 @@
 }
 
 .bookAnimation {
-    height: 50%;
-    width: 50%;
-    margin-top: 1em;
+    height: 32%;
+    width: 32%;
+}
+
+#homeCard1 {
+    margin-bottom: 90px;
 }
 
 .discussionAnimation {
-    height: 40%;
-    width: 40%;
+    height: 33%;
+    width: 33%;
 }
 
 .communityAnimation {
